--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "author": "Oscar Ballesteros",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
-    "mongoose": "^8.8.4"
+    "express-validator": "^7.2.0",
+    "mongoose": "^8.8.4",
+    "slug": "^8.2.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/slug": "^5.0.9",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
